--- a/app/src/main/res/layout/popup_leader_board.xml
+++ b/app/src/main/res/layout/popup_leader_board.xml
@@ -49,9 +49,11 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="No"
+                    android:textStyle="bold"
                     android:textSize="20dp" />
 
                 <TextView
+                    android:textStyle="bold"
                     android:layout_weight="1.5"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -60,6 +62,7 @@
                     android:textSize="20dp" />
 
                 <TextView
+                    android:textStyle="bold"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -73,19 +76,12 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:id="@+id/recycler"
+                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="300dp">
+                android:layout_height="400dp">
 
             </android.support.v7.widget.RecyclerView>
 
-            <Button
-                android:id="@+id/btnBack"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_gravity="center"
-                android:text="Back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
